# smatrix

./: .gitignore  README.md  pyproject.toml
smatrix/: __init__.py  config.py  create.py  default.py  example_config.toml  generate.py  instances.py  main.py  slurm.py
